--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.readutf</groupId>
-    <artifactId>FedEx</artifactId>
+    <artifactId>fedex</artifactId>
     <version>1.3-SNAPSHOT</version>
 
     <properties>
