--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <artifactId>fedex</artifactId>
     <version>1.3-SNAPSHOT</version>
 
+    <distributionManagement>
+        <repository>
+            <id>auraside</id>
+            <name>GitHub auraside Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/auraside/FedEx</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
