--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.readutf</groupId>
+    <groupId>gg.mpl</groupId>
     <artifactId>fedex</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.2-SNAPSHOT</version>
 
     <distributionManagement>
         <repository>
