--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
     </dependencies>
 
     <build>
+        <defaultGoal>clean package</defaultGoal>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
