--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>4.0.0</version>
-            <scope>compile</scope>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.16.8</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
