--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.readutf</groupId>
     <artifactId>fedex</artifactId>
-    <version>3.2.3</version>
+    <version>3.3.0</version>
 
     <organization>
         <name>AuraSide</name>
@@ -41,12 +41,17 @@
             <artifactId>jedis</artifactId>
             <version>4.0.0</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
-            <scope>compile</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.4</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -54,7 +59,6 @@
             <version>22.0.0</version>
             <scope>compile</scope>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
